feat: integrate Gemini API for product review summarization

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ PORT=5000
 CRAWLBASE_TOKEN="panVxST8Utk3w9mkHX2dxA"
 AMAZON_REVIEW_COOKIES="x-acbin=Ws5Or0X6ElG9Xe0vMWl4M@XqRrJ2JRlMMCmAM4zNXx8HeNIJvv7LzW2igTy4EcLd; at-acbin=Atza|IwEBIDzqIDHmzvbJyHzgGeJg8JsG-mfGrdXWs5y9fVPFT96yrWWj_DlHKjimp7pvYaJ6n5RgaQ64CjecLR4URfmBXbOEsMuruUnDqA6C7utI-uWs6cNB4jITKaQ9zFjjLow39DyKFRpHzCoppTFw4etXm1PrQCQ_6Ft_9PfiiaBIXM6ctCczQS05stklQBQzcjj3cr5CbIVVg63kt3oj1qkWF_Z-OpaKgnTJjYUyFIxMU7lEZA"
 GROQ_API_KEY="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"
+GEMINI_API_KEY="AIzaSyDYjKmdcB_zDTuTbJokubhPO-dpPFmsTcM"
